# paradigmctf-py

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  compose.yml  dev-requirements.txt  k8s.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: build.yml  lint.yml  test.yml
compose/: base.yml
ctf_launchers/: daemon.py  deployer.py  koth_launcher.py  launcher.py  pwn_launcher.py  score_submitter.py  team_provider.py  types.py  utils.py
ctf_server/: __init__.py  anvil_proxy.py  loaders.py  orchestrator.py  utils.py
ctf_server/backends/: __init__.py  backend.py  docker_backend.py  kubernetes_backend.py
ctf_server/databases/: __init__.py  database.py  redisdb.py  sqlitedb.py
ctf_server/types/: __init__.py
ctf_solvers/: koth_solver.py  pwn_solver.py  solver.py  types.py  utils.py
examples/: compose.yml  k8s.yml  solve.py
examples/extra-methods/: Dockerfile  challenge.py
examples/extra-methods/project/src/: Hello.sol
examples/hello/: Dockerfile  challenge.py
examples/hello/project/script/: Deploy.s.sol
examples/hello/project/src/: Hello.sol
foundry/: anvil.py
tests/: __init__.py  test_controls.py  test_pwn_challenges.py
